tests/typechecker/should_fail/type_annotations_10.csp
f :: (a) -> b
f(x) = x
